--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id "org.springframework.boot" version "3.2.0"
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group 'org.example'
@@ -16,6 +18,12 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.20'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    implementation 'com.h2database:h2:1.4.200'
+
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '6.1.0'
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
 test {
